# zotero-write-mcp

./: .gitignore  API_REFERENCE.md  README.md  pyproject.toml
docs/runbooks/: first-live-mass-merge.md
runtime/: validation-calibration.json
scripts/: acknowledge_verify_failure.py  approve_record.py  backup_before_live.py  citekey_audit.py  library_health_snapshot.py  phase0_live_gate.py  phase1_dcreplaces_live.py  phase2_apply_reconciled.py  phase2_commit_merge_live.py  phase2_enrichment_smoke.py  phase2_exit_gate_shadow.py  phase2_live_apply.py  readiness.py  sources_live_smoke.py
src/zotero_write_mcp/: __main__.py  backup.py  citekeys.py  client.py  dedup.py  fileops.py  gateway.py  ingest.py  merge.py  merge_live.py  observability.py  provenance.py  readiness.py  safety.py  server.py  sources.py  utils.py  validation.py  webscan.py
tests/: test_backup.py  test_citekeys.py  test_client_routing.py  test_commit_merge.py  test_dedup.py  test_field_enrichment.py  test_fileops.py  test_gateway.py  test_ingest.py  test_merge_cluster.py  test_merge_snapshot.py  test_observability.py  test_observability_acknowledge.py  test_observability_coverage.py  test_phase2_live_apply.py  test_provenance.py  test_readiness.py  test_rollback.py  test_server_tools.py  test_shadow.py  test_sources.py  test_utils.py  test_validation.py  test_validation_conflicts.py  test_verify_injection.py  test_verify_merge.py  test_web_reader.py  test_webscan.py
